--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,12 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <%= javascript_importmap_tags %>
   </head>
-
   <body>
+    <%= render partial: "common/nav"%>
     <%= yield %>
+    <%= javascript_include_tag 'navbar' %>
   </body>
 </html>
